# aoc2023

day00/: Cargo.toml
day00/benches/: my_benchmark.rs
day00/src/: main.rs
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/benches/: my_benchmark.rs
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/benches/: my_benchmark.rs
day05/src/: lib.rs
day06/: Cargo.toml
day06/benches/: my_benchmark.rs
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/benches/: my_benchmark.rs
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/benches/: my_benchmark.rs
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/benches/: my_benchmark.rs
day09/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/benches/: my_benchmark.rs
day10/src/: lib.rs  main.rs  t
day11/: Cargo.toml
day11/benches/: my_benchmark.rs
day11/src/: lib.rs  main.rs
day12/: Cargo.toml
day12/benches/: my_benchmark.rs
day12/src/: lib.rs  main.rs  t  test.txt  test2.txt  test3.txt
day13/: Cargo.toml
day13/benches/: my_benchmark.rs
day13/src/: lib.rs  main.rs  testv.txt
day14/: Cargo.toml
day14/benches/: my_benchmark.rs
day14/src/: lib.rs  main.rs
day15/: Cargo.toml
day15/benches/: my_benchmark.rs
day15/src/: lib.rs  main.rs
day16/: Cargo.toml
day16/benches/: my_benchmark.rs
day16/src/: lib.rs  main.rs
